--- a/package.json
+++ b/package.json
@@ -6,10 +6,26 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --ext .ts,.js,.vue ."
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18",
-    "nuxt": "^3.4.3"
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.12.0",
+    "nuxt": "^3.4.3",
+    "nuxt-icon": "^0.4.0",
+    "postcss": "^8.4.23",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "@headlessui/tailwindcss": "^0.1.3",
+    "@headlessui/vue": "^1.7.13"
   }
 }
