--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "postcss": "^8.4.23",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^4.7.0",
+    "@egjs/vue3-flicking": "^4.10.7",
     "@headlessui/tailwindcss": "^0.1.3",
-    "@headlessui/vue": "^1.7.13"
+    "@headlessui/vue": "^1.7.13",
+    "daisyui": "^2.51.6"
   }
 }
