--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .ts,.js,.vue ."
   },
+  "overrides": {
+    "vue": "latest"
+  },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18",
+    "@unlazy/nuxt": "^0.8.9",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.12.0",
     "nuxt": "^3.4.3",
     "nuxt-icon": "^0.4.0",
     "postcss": "^8.4.23",
-    "prettier": "2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2"
   },
@@ -30,8 +28,10 @@
     "@egjs/vue3-flicking": "^4.10.7",
     "@headlessui/tailwindcss": "^0.1.3",
     "@headlessui/vue": "^1.7.13",
+    "@pinia/nuxt": "^0.4.10",
     "@prisma/client": "^4.14.1",
     "daisyui": "^2.51.6",
+    "pinia": "^2.0.36",
     "prisma": "^4.14.1"
   }
 }
