--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@egjs/vue3-flicking": "^4.10.7",
     "@headlessui/tailwindcss": "^0.1.3",
     "@headlessui/vue": "^1.7.13",
+    "@nuxtjs/supabase": "^0.3.5",
     "@pinia/nuxt": "^0.4.10",
     "@prisma/client": "^4.14.1",
     "daisyui": "^2.51.6",
