--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@nuxtjs/supabase": "^0.3.5",
     "@pinia/nuxt": "^0.4.10",
     "@prisma/client": "^4.14.1",
+    "@vuepic/vue-datepicker": "^5.1.2",
     "daisyui": "^2.51.6",
+    "joi": "^17.9.2",
     "pinia": "^2.0.36",
     "prisma": "^4.14.1"
   }
